--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 200px;
 }
 .baby{
     width: 50%;
@@ -45,4 +46,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.body{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
