--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .naughty{
     color:yellow;
 
@@ -27,6 +30,8 @@ h1{
 .flexible-container{
     display: flex;
     margin-bottom: 200px;
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat
 }
 .baby{
     width: 50%;
@@ -69,4 +74,13 @@ h1{
 }
 .lost{
     color: darkred;
+}
+.nothing{
+    width: 50%;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 40px;
+    box-shadow: 10px 10px 10px orangered;
 }
